# ai_doc_manager

./: .docguardian.toml  .gitattributes  .gitignore  .gitmessage  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.ai/: progress.md
.githooks/: commit-msg  pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/design/: ai-doc-architecture.md  product-spec.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compliance.rs  conflict.rs  gc.rs  init.rs  llm.rs  mod.rs  project.rs  prune.rs  rule.rs
src-tauri/src/core/: compliance_checker.rs  conflict_detector.rs  memory_gc.rs  mod.rs  orchestrator.rs  project_initializer.rs  redundancy_pruner.rs  rule_extractor.rs
src-tauri/src/models/: conflict.rs  document.rs  mod.rs  project.rs  rule.rs  violation.rs
src-tauri/src/services/: code_sampler.rs  db.rs  file_watcher.rs  git.rs  markdown_parser.rs  mod.rs  tech_detector.rs  vector_index.rs
src-tauri/src/services/llm/: adapter.rs  mod.rs  ollama.rs  openai_compatible.rs
src-tauri/tests/: test_initializer.rs
src/components/layout/: Header.tsx  Sidebar.tsx
src/hooks/: useTauriCommand.ts
src/lib/: utils.ts
src/pages/: ConflictsPage.tsx  DashboardPage.tsx  GCPage.tsx  ProjectsPage.tsx  PrunerPage.tsx  RulesPage.tsx  SettingsPage.tsx
src/stores/: projectStore.ts  uiStore.ts
